--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <a href="#">Home</a>
         <a href="#">Shop</a>
         <!-- Add this Cart Icon/Count -->
-        <a href="#">Cart (<span id="cart-count">0</span>)</a> 
+        <a href="#">Cart (<span id="cart-count">0</span>)</a>
+        <!-- Replace the old button with this Link -->
+<a href="YOUR_STRIPE_PAYMENT_LINK_HERE" class="btn">Buy Now</a>
     </div>
     </nav>
 
@@ -90,3 +92,4 @@
 </script>
 
 </html>
+
