--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
         <!-- Replace the old button with this Link -->
 <a href="YOUR_STRIPE_PAYMENT_LINK_HERE" class="btn">Buy Now</a>
     </div>
-    </nav>
+    </nav> 
+
+    <!-- Product 1 -->
+<div class="product-card">
+    <img src="https://images.unsplash.com/photo-1541643600914-78b084683601?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Perfume 1" class="product-img">
+    <h3>Luk Noir</h3>
+    <p>Oud, Vanilla, Pepper</p>
+    <p class="price">$120.00</p>
+    
+    <!-- PAYMENT BUTTON START -->
+    <!-- Replace the href with your actual Stripe Link or PayPal Button Link -->
+    <a href="https://buy.stripe.com/test_123456789" class="btn" target="_blank">Buy Now</a>
+    <!-- PAYMENT BUTTON END -->
+</div>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -92,4 +105,5 @@
 </script>
 
 </html>
+
 
