--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luk-Classico | Luxury Perfumery</title>
     <link rel="stylesheet" href="style.css">
+    
     <!-- Importing Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -91,6 +93,7 @@
 </script>
 
 </html>
+
 
 
 
